tests/src/frontend/typechecking/invalid/const_using_tparam_2.sk
class B<T: String>() {
  const x: String = {
    a = (Array[] : Array<T>);
    a.concat(Array["Fail\n"])[0];
  };
}
